# adwshell

./: Cargo.toml  README.md
resources/: config.default.toml
src/: app.rs  classes.rs  data.rs  main.rs  settings.rs  util.rs  window_ext.rs
src/components/: clock_widget.rs  mod.rs
src/settings/: app_list.rs  clock.rs  launcher.rs  loader.rs  mod.rs  panel.rs  settings.rs
src/workers/: config_watcher.rs  heartbeat.rs  mod.rs
